Version 0.85
??-??-202?
Updated by RoboCop
--------------------------------------------------------------------------------

- Added new waypoints:-
	+ 2kfort23
	+ 2kfort5
	+ junob7
	+ lastresort_b1
	+ gauntlet
	+ tfc_orange

- Modernised RSM's angle bug fix

- Added C++17 Standard library functions support for Win32 and Linux

- Both Win32 and Linux builds now compiled using AMBuild

- Reverted the `ProcessCommanderList` coding from version 0.791

- Fixed the bot_chat cvar from not allowing bots to talk freely

- Fixed the `WRITE_BYTE` implicit conversion for waypoint coding

- Enhanced the waypoint area data for dustbowl

- Removed lame SG Turret nodes for 2fort, avanti, crossover2, epicenter, rock2 and well in non recommended areas 

TODO List:-

>> Complete 'botdontmove' in order for "GolfBots" to stay stationary

>> To allow medic bots to heal more often, but not allow `JOB_BUFF_ALLY` to consume to many cells as engineers

>> To allow soldier bots to Rocket Jump easily

>> To add some possible new waypoint flags like `Lift Button` and `Shoot Here`

>> Fix bots navigation when shot by enemies as they sometimes cannot seem to detect where damage is coming from

>> To prevent engineers to go around SG turrets when repairing/upgrading

>> To allow bots to use Nail Guns for destroying SG turrets, when out of nades or from a long distance

>> To prevent bots from shooting at spy corpses too long as, they aren't aware that a player switched teams as enemy spy

>> Allow bots to toss grenades at a higher elevation angle and from a lower distance as their target aim is too far

>> BONUS: Maybe add a feature for bots to have experience and wisdom or learned data in order to be a bit more human

--------------------------------------------------------------------------------
Version 0.801
November-05-2022
Updated by RoboCop
--------------------------------------------------------------------------------

- Added new waypoints:-
	+ congestus_lg
